--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,19 @@
-<div>
-  <h1>Heading</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores libero molestiae consequuntur eligendi non ullam saepe aperiam fugit fugiat, error illum, architecto quisquam. Sapiente sit maxime at pariatur officiis, sequi placeat aut architecto error?</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Todo List</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+      </ul>      
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <app-todo></app-todo>
 </div>
