show and delete a todo

--- a/src/app/Components/todo-item/todo-item.component.html
+++ b/src/app/Components/todo-item/todo-item.component.html
@@ -1,1 +1,5 @@
-<p>todo-item works!</p>
+<div>
+    <h5>{{todo.title}}</h5>
+    <p>{{todo.description}}</p>
+    <button class="btn btn-sm btn-danger mb-3" (click)="deleteTodoMethod(todo)">Delete</button>
+</div>
