--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="container-fluid">
+  <h3 class="text-center">Todo List</h3>
   <app-todo></app-todo>
 </div>
